tests/fixtures/errors/in_rhs_not_collection.assura
// MUST REJECT A03001
// The `in` operator requires a collection on the right side.

contract InRhsNotCollection {
  input { x: Int, y: Int }
  requires { x in y }
}
